[package]
name = "neon-demo"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
num_cpus = "1.13.0"
rayon = "1.5.1"
lazy_static = "1.4.0"
threadpool = "1.8.1"
image = "0.23.14"
num-complex = "0.4.0"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]
